--- a/VSC.Core.DemoDataLinks.WebUI/Views/People/Index.cshtml
+++ b/VSC.Core.DemoDataLinks.WebUI/Views/People/Index.cshtml
@@ -30,7 +30,7 @@
                 <th>Last Name</th>
                 <th>Contact Group</th>
                 <th>Interests</th>
-                <th><datamodel-add-button></datamodel-add-button></th>
+                <th class="button-col-4"><datamodel-add-button></datamodel-add-button></th>
             </tr>
         </thead>
         <tbody>
@@ -56,10 +56,13 @@
     </table>
 </hidden-if-empty>
 
+@section Head
+{
+    <link rel="stylesheet" href="_content/VSC.Core.WebRCL/css/querygrid.css" />
+}
+
 @section Scripts
 {
-    @{
-        await Html.RenderPartialAsync("_ConfirmationDialogScriptPartial");
-        await Html.RenderPartialAsync("_FilterScriptsPartial");
-    }
+    <script src="_content/VSC.Core.WebRCL/vsc.javascript/vsc.dialogs.confirm.js" asp-append-version="true"></script>
+    <script src="_content/VSC.Core.WebRCL/vsc.javascript/vsc.forms.autosubmit.js" asp-append-version="true"></script>
 }
