--- a/VSC.Core.DemoDataLinks.WebUI/Views/Interest/Detail.cshtml
+++ b/VSC.Core.DemoDataLinks.WebUI/Views/Interest/Detail.cshtml
@@ -24,6 +24,7 @@
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Added</th>
+                    <th></th>
                 </tr>
             </thead>
         <tbody>
@@ -33,6 +34,11 @@
                     <td>@row.Person.FirstName</td>
                     <td>@row.Person.LastName</td>
                     <td>@Html.ShortDate(row.Inserted)</td>
+                    <td>
+                            <a asp-action="RemoveLink" asp-controller="LinkInterestPerson" asp-route-id="@row.PersonalInterestId"
+                               asp-route-fromController="Interest" asp-route-fromAction="Detail" 
+                                asp-route-fromId="@Model.DataModel.Key"> <i class="bi-trash"></i></a>
+                    </td>
                 </tr>
             }
             </tbody>
