Search clear input script added to VSC core RCL

--- a/VSC.Core.DemoDataLinks.WebUI/Views/People/Index.cshtml
+++ b/VSC.Core.DemoDataLinks.WebUI/Views/People/Index.cshtml
@@ -58,11 +58,10 @@
 
 @section Head
 {
-    <link rel="stylesheet" href="_content/VSC.Core.WebRCL/css/querygrid.css" />
+    <query-grid-add-styles></query-grid-add-styles>
 }
 
 @section Scripts
 {
-    <script src="_content/VSC.Core.WebRCL/vsc.javascript/vsc.dialogs.confirm.js" asp-append-version="true"></script>
-    <script src="_content/VSC.Core.WebRCL/vsc.javascript/vsc.forms.autosubmit.js" asp-append-version="true"></script>
+        <query-grid-add-scripts></query-grid-add-scripts>
 }
