--- a/VSC.Core.DemoDataLinks.WebUI/Views/ContactType/Index.cshtml
+++ b/VSC.Core.DemoDataLinks.WebUI/Views/ContactType/Index.cshtml
@@ -29,7 +29,7 @@
                 <tr>
                     <td>@row.Title</td>
                     <td>@row.ContactData.Count()</td>
-                    <td><datamodel-edit-buttons row-object="@row"></datamodel-edit-buttons></td>
+                    <td class="button-cell"><datamodel-edit-buttons row-object="@row"></datamodel-edit-buttons></td>
                 </tr>
             }
         </tbody>
