--- a/VSC.Core.DemoDataLinks.WebUI/Views/Interest/Detail.cshtml
+++ b/VSC.Core.DemoDataLinks.WebUI/Views/Interest/Detail.cshtml
@@ -24,7 +24,7 @@
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Added</th>
-                    <th></th>
+                    <th class="button-col-2"></th>
                 </tr>
             </thead>
         <tbody>
@@ -46,3 +46,7 @@
     </div>
 </div>
 
+@section Head
+{
+    <query-grid-add-styles></query-grid-add-styles>
+}
