--- a/VSC.Core.DemoDataLinks.WebUI/Views/People/Index.cshtml
+++ b/VSC.Core.DemoDataLinks.WebUI/Views/People/Index.cshtml
@@ -34,7 +34,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var row in Model.Rows.OrderBy(x => x.LastName).ThenBy(x=>x.FirstName))
+            @foreach (var row in Model.Rows)
             {
                 <tr>
                     <td>@row.FirstName</td>
@@ -49,7 +49,7 @@
                             </span>
                         }
                     </td>
-                    <td><datamodel-edit-buttons row-object="@row"></datamodel-edit-buttons></td>
+                    <td class="button-cell"><datamodel-edit-buttons row-object="@row"></datamodel-edit-buttons></td>
                 </tr>
             }
         </tbody>
